tests/err_qty/exp_frac_zero_hex_div_one.rs
#![allow(unused_imports)]
use dana::{qty, symbols::*};

fn main() {
    let _err = qty![1.0 m^(0x00/1)];
}
